--- a/Rules
+++ b/Rules
@@ -1,17 +1,29 @@
 #!/usr/bin/env ruby
 
 compile '/**/*.html' do
+  filter :rubypants
   layout '/default.*'
 end
 
-# This is an example rule that matches Markdown (.md) files, and filters them
-# using the :kramdown filter. It is commented out by default, because kramdown
-# is not bundled with Nanoc or Ruby.
-#
-#compile '/**/*.md' do
-#  filter :kramdown
-#  layout '/default.*'
-#end
+compile '/**/*.md' do
+  filter :kramdown
+  filter :rubypants
+  filter :relativize_paths, type: :html
+  layout '/default.*'
+end
+
+compile '/**/*.scss' do
+  filter :sass, syntax: :scss, style: :compact
+  filter :relativize_paths, type: :css
+  filter :yui_compressor, type: :css
+  write item.identifier.without_ext + '.css'
+end
+
+compile '/**/*.coffee' do
+  filter :coffeescript
+  filter :yui_compressor, type: :css
+  write item.identifier.without_ext + '.js'
+end
 
 route '/**/*.{html,md}' do
   if item.identifier =~ '/index.*'
@@ -25,4 +37,4 @@ compile '/**/*' do
   write item.identifier.to_s
 end
 
-layout '/**/*', :erb
+layout '/**/*', :slim
