--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -24,6 +24,8 @@ index_filenames: [ 'index.html' ]
 # before and after the last site compilation.
 enable_output_diff: false
 
+base_url: '.'
+
 prune:
   # Whether to automatically remove files not managed by Nanoc from the output
   # directory.
