--- a/nanoc.gh-pages.yaml
+++ b/nanoc.gh-pages.yaml
@@ -24,7 +24,7 @@ index_filenames: [ 'index.html' ]
 # before and after the last site compilation.
 enable_output_diff: false
 
-base_url: 'https://blog3.tommyku.com'
+base_url: 'https://blog.tommyku.com'
 
 prune:
   # Whether to automatically remove files not managed by Nanoc from the output
