--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog3",
   "version": "1.0.0",
   "scripts": {
-    "serve": "live-server --port=3000 --host=localhost ./output"
+    "serve": "live-server --port=3000 ./output"
   },
   "dependencies": {
     "live-server": "^1.1.0"
