--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "blog3",
   "version": "1.0.0",
   "scripts": {
-    "serve": "live-server --port=3000 ./output"
+    "serve": "live-server --port=3000 ./output",
+    "check": "write-good"
   },
   "dependencies": {
-    "live-server": "^1.1.0"
+    "live-server": "^1.1.0",
+    "write-good": "^0.10.0"
   }
 }
