--- a/Rules
+++ b/Rules
@@ -48,6 +48,11 @@ compile '/**/*.js' do
   write item.identifier.without_ext + '.js'
 end
 
+compile '/atom.erb' do
+  filter :erb
+  write '/atom.xml'
+end
+
 route '/**/*.{html,md,slim}' do
   if item.identifier =~ '/index.*'
     '/index.html'
