ALT: use bash as language, and publish to master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
 
-language: ruby
+language: bash
 
 services:
   - docker
@@ -13,6 +13,7 @@ script:
 
 deploy:
   provider: pages
+  target-branch: master
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
