--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ before_install:
 
 script:
   - docker run --rm -v "`pwd`":/app blog3 ./bin/publish
+  - sudo rm -rf content/ bin/ Dockerfile Gemfile* Guardfile layouts lib Makefile nanoc.gh-pages.yaml nanoc.yaml output Rules template tmp yarn.lock
+  - cp -r docs/* `pwd`
 
 deploy:
   provider: pages
-  target-branch: master
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
