REF: clean up unnecessary files when deploying

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 
 script:
   - docker run --rm -v "`pwd`":/app blog3 ./bin/publish
-  - sudo rm -rf content/ bin/ Dockerfile Gemfile* Guardfile layouts lib Makefile nanoc.gh-pages.yaml nanoc.yaml output Rules template tmp yarn.lock
+  - sudo rm -rf .ruby-version .dockerignore .travis.yml content/ bin/ Dockerfile Gemfile* Guardfile layouts lib Makefile nanoc.gh-pages.yaml nanoc.yaml output Rules template tmp yarn.lock
   - cp -r docs/* `pwd`
 
 deploy:
@@ -20,5 +20,4 @@ deploy:
   keep-history: false
   on:
     branch: master
-  keep-history: true
   verbose: true
