--- a/Rules
+++ b/Rules
@@ -66,7 +66,7 @@ route '/**/*.{html,md,slim}' do
 end
 
 %w(blog preview special).each do |type|
-  compile "/assets/#{type}_images/*/*.{jpg,png,gif}" do
+  compile "/assets/#{type}_images/*/*.{jpg,png,gif,pdf}" do
     new_location = item.identifier.to_s.gsub("\/assets\/#{type}_images\/", "/#{type}/")
     write new_location
   end
