--- a/nanoc.gh-pages.yaml
+++ b/nanoc.gh-pages.yaml
@@ -97,7 +97,7 @@ checks:
 post_suggestion: true
 
 # Whether to render GA script
-enable_analytics: false
+enable_analytics: true
 
 # Whether to render Disqus
 enable_disqus: true
