--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -97,7 +97,7 @@ checks:
 post_suggestion: false
 
 # Whether to render GA script
-enable_analytics: true
+enable_analytics: false
 
 # Whether to render Disqus
 enable_disqus: false
